# gh_actions

./: CLAUDE.md  Cargo.toml  GITHUB_ACTIONS_SETUP.md  README.md  build-wasm.sh  cd-deploy-workflow.yml  ci-test-workflow.yml
.github/workflows/: ci.yml  claude.yml  deploy.yml  test.yml
benches/: benchmarks.rs
docs/: README.md  api.md  development.md  setup.md  todos.md  usage.md
src/: app.rs  kpi_app.rs  lib.rs  main.rs  task.rs  user_manager.rs  utils.rs  wasm.rs
tests/: cli_tests.rs  integration_test.rs  property_tests.rs
tests/common/: mod.rs
www/: egui.html  index.html
