[package]
name = "gh_actions"
version = "0.1.0"
edition = "2021"
description = "A Rust application with comprehensive test framework for GitHub Actions"
authors = ["DScudeler"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "gh_actions"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.test]
opt-level = 1

[profile.bench]
opt-level = 3