[package]
name = "gh_actions"
version = "0.1.0"
edition = "2021"
description = "A WASM task management application built with Rust"
authors = ["DScudeler"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
lazy_static = "1.4"
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.30"
egui_plot = "0.30"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
wasm-bindgen-futures = "0.4"

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "gh_actions"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.test]
opt-level = 1

[profile.bench]
opt-level = 3